RecipeEndpoint - getAllRecipesViews(), getRecipeViewById(...)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.sql.init.mode=always
 logging.level.sql=DEBUG
 logging.level.springframework.orm.jpa=DEBUG
 logging.level.springframework.transaction=DEBUG
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 
 server.port=9090
