--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/cook_and_bake
 spring.datasource.username=root
-spring.datasource.password=sqlkurs
+spring.datasource.password=sys12345
 spring.sql.init.mode=always
 logging.level.sql=DEBUG
 logging.level.springframework.orm.jpa=DEBUG
